--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <img src= 
+        <link rel="stylesheet" href="css/style.css"
+
         <title> Friedberg Designs </title>
     </head> 
     <body>
+        <header> 
+            <nav class="navigation-bar"> 
+                <img class="logo-img" src="images/logo@2x.png"
+                </ul>class="logo-img">
+                <div class="container">
+            <div class="topnav"> 
+                <a class="active" href="#home">HOME</a>
+                <a href="#about">ABOUT</a>
+                <a href="#work">WORK</a>
+                <a href="contact">CONTACT</a>
+            </div> 
+            </div>
+            </div>
+            </nav> 
+        </header>
 
+        <heroimag>
+            <img src="images/IMG_1584.png" alt="Andrea Friedberg headshot" style="width: 679px; height: 968px;">
+            <p> My design background can be traced back to my childhood, where I was frequently found constructing intricate doll houses, designing my own figure skating dresses and depleting all the office paper at my parents’ small business for drawings and poems. 
+                Today, my body of work consists of undergrad graphic design projects, retail sales floor planograms, modeling jobs and UX/UI case studies. In my mind, we are surrounded by design everyday, sometimes we just need to be open to observing and appreciating it. </p>
+                <button> DOWNLOAD CV </button>
+        </heroimag>
+        <footer> 
+            <ul>
+                <li>friedberg.design@gmail.com</li>
+                <li>Denver, CO</li> 
+                <li>social media</li> 
+            </ul>
+        </footer>
     </body>
 </html> 
